Fixed IE scrollbar issues for most if not all components
Fixed by defining font-size:0 and line-height:normal for all v-scrollable elements. A font-size is defined using $font-size for all themes and this is reset in v-widget. Similarly for $line-height.
Should fix at least #9004, #9552, #9572

--- a/WebContent/VAADIN/themes/base/caption/caption.scss
+++ b/WebContent/VAADIN/themes/base/caption/caption.scss
@@ -6,6 +6,7 @@
 .#{$primaryStyleName} {
 	overflow: hidden;
 	white-space: nowrap;
+	font-size: $font-size;
 }
 .v-errorindicator {
 	display: inline-block;
