--- a/WebContent/VAADIN/themes/base/textfield/textfield.scss
+++ b/WebContent/VAADIN/themes/base/textfield/textfield.scss
@@ -67,6 +67,7 @@ textarea.v-textarea-readonly:focus {
 }
 .v-richtextarea .gwt-HTML {
 	height: 100%;
+	font-size: $font-size;
 }
 .v-richtextarea .gwt-RichTextToolbar {
 	white-space: nowrap;
