--- a/WebContent/VAADIN/themes/reindeer/accordion/accordion.scss
+++ b/WebContent/VAADIN/themes/reindeer/accordion/accordion.scss
@@ -18,6 +18,9 @@
 	border-top: 1px solid #bebebe;
 	text-shadow: #fff 0 1px 0;
 }
+.#{$primaryStyleName}-item-caption .v-caption {
+	font-size: 11px;
+}
 
 .#{$primaryStyleName}-item-caption .v-captiontext{
 	vertical-align:baseline;
